--- a/gocd.yml
+++ b/gocd.yml
@@ -13,7 +13,7 @@ pipelines:
           jobs:
            build:
              tasks:
-              - excec:
+              - exec:
                  run_if: passed
                  command: /bin/sh
                  argumnets: 
