--- a/apache-pipelineasacode.gocd.yaml
+++ b/apache-pipelineasacode.gocd.yaml
@@ -12,7 +12,7 @@ pipelines:
         shallow_clone: false
         auto_update: true
         branch: master
-        encrypted_password: 12345
+        encrypted_password: AES:1zRWFvBukSPY8hxsOeoi/g==:On0/MgsFZIqMIVqAPeoecQ==
     stages:
     - installapache:
         fetch_materials: true
